# RadioImagerGPU

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  README_doxy.md  config.json  requirements.txt
analysis/: README.md  README_doxy.md  cpu_timings.csv  cuda_timings.txt  gpu_timings.csv  python_timings.txt
data/: README.md  image_data.csv  image_data_gpu.csv  uv_coordinates.csv  xyz_coordinates.csv
docs/: compare__images_8py.html  compute_8cu.html  compute_8hpp.html  config_8hpp_source.html  data__io_8hpp.html  data__io_8hpp_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  generate__image_8py.html  globals.html  globals_func.html  imaging_8cu.html  imaging_8hpp.html  imaging__cpu_8py.html  imaging__no__grid_8cu.html  index.html  main_8cu.html  md__r_e_a_d_m_e__doxy.html  md_analysis_2_r_e_a_d_m_e__doxy.html  md_python_2_r_e_a_d_m_e__doxy.html  md_src_2_r_e_a_d_m_e__doxy.html  md_tests_2_r_e_a_d_m_e__doxy.html  namespacecompare__images.html  namespaceconfig.html  namespacegenerate__image.html  namespacegenerate__synthetic__data.html  namespacemembers.html  namespaces.html  pages.html  python_2_r_e_a_d_m_e_8md.html  src_2_r_e_a_d_m_e__doxy_8md.html  src__r_e_a_d_m_e.html  tests_2_r_e_a_d_m_e__doxy_8md.html
include/: compute.hpp  config.hpp  data_io.hpp  imaging.hpp
python/: README.md  convert_gpu_csv_to_png.py  generate_synthetic_data.py  imaging_cpu.py
python_scripts/: plot_image.py  plot_uv.py
src/: README.md  compute.cu  config.cpp  data_io.cpp  imaging.cu  imaging_no_grid.cu  main.cu
tests/: README.md  (+1 more)
(+155 files in other folders)
